syntax = "proto3";

package tests;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/srikrsna/zapproto/test_data;testspb";

message Person {
    string name = 1;
    int32 age = 2;
    google.protobuf.Timestamp dob = 3;    
    MaritalStatus marital_status = 4;
    repeated Person siblings = 5;
    google.protobuf.Duration hours_per_week = 6;    
    bool alive = 7;
    oneof gender {
        bool male = 8;
        bool female = 9;
        bool other = 10;
    }
    map<string, Books> favourite_books = 11;
    repeated google.protobuf.Timestamp fav_days = 12;
    google.protobuf.Struct metadata = 13;
}

message Books {
    repeated string books = 1;
}

enum MaritalStatus {
    MaritalStatus_UNSPECIFIED = 0;
    MaritalStatus_SINGLE = 1;
    MaritalStatus_MARRIED = 2;
}
